<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机卫士</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="unknow_verson">版本号未知</string>
    <string name="apkurl">http://169.254.25.179:8080/update.xml</string>
    <string name="dburl">http://169.254.25.179:8080/address.db</string>
    <string name="apkurl1">http://127.0.0.1:8080/update.xml</string>
    <string name="mainscreen">主界面</string>
    <string name="lostprotected"></string>
    
    <string name="mobile_defender">手机防盗</string>
	<string name="mobile_guard">通讯卫士</string>
	<string name="mobile_sofeware_manage">软件管理</string>
	<string name="mobile_task_manage">任务管理</string>
	<string name="mobile_flow_manage">流量管理</string>
	<string name="mobile_killvirue">手机杀毒</string>
	<string name="mobile_system_optimization">系统优化</string>
	<string name="mobile_senior_tools">高级工具</string>
	<string name="mobile_setting_center">设置中心</string>
	<string name="mobile_aboutsoftware">关于软件</string>
	
	
	<string name="mainscreen_item_tv">功能名字</string>
	
	
	<string name="normal_entry_dialog_tv_titile">登陆界面</string>
	<string name="normal_entry_dialog_tv_password">请输入密码</string>
	<string name="normal_entry_dialog_bn_confirm">确定</string>
	<string name="normal_entry_dialog_bn_cancel">取消</string>
	
	<string name="LostProtectedscreen">防盗界面</string>
	
	
	
	<string name="setupguide_title_first">1.欢迎使用手机防盗</string>
	<string name="setupguide_title_second">2.手机卡绑定</string>
	<string name="setupguide_title_third">3.设置安全号码</string>
	<string name="setupguide_title_fourth">4.恭喜你,设置完成</string>
	
	
	<string name="setupguide_content_first">您的手机防盗卫士</string>
	<string name="setupguide_content_second">如果sim绑定\n下次重启手机如果sim变更就会发送报警短信</string>
	<string name="setupguide_content_third">sim卡更换后会把报警短信,发送到该号码上</string>
	<string name="setupguide_content_fourth">强烈建议你开启保护</string>
	
	<string name="setupguide_first_functioncontent_first">sim卡变更报警</string>
	<string name="setupguide_first_functioncontent_second">gps追踪</string>
	<string name="setupguide_first_functioncontent_third">远程销毁数据</string>
	<string name="setupguide_first_functioncontent_fourth">远程锁屏</string>
	
	
	<string name="setupguide_button_next_content">下一步</string>
	<string name="setupguide_button_purview_content">上一步</string>
	<string name="setupguide_button_finish_content">上一步</string>
	
	
	<string name="setupguide_label_first">设置第一步</string>
	<string name="setupguide_label_second">设置第二步</string>
	<string name="setupguide_label_third">设置第三步</string>
	<string name="setupguide_label_fourth">设置第四步</string>
	
	
	<string name="setupguide_third_editext_hint">请输入或者选择安全手机号码</string>
	<string name="setupguide_third_button_text">选择联系人</string>
	
	<string name="setupguide_fourth_tv_text">强烈建议你开启保护</string>
	<string name="setupguide_fourth_cb_text">保护没有开启</string>
	
	
	<string name="ContactInfo_uri_raw_contacts">content://com.android.contacts/raw_contacts</string>
	<string name="ContactInfo_uri_data">content://com.android.contacts/data</string>
	
	
	<string name="lost_protected_tv_number_content">安全手机号码</string>
	<string name="lost_protected_tv_cb_content">没有开启防盗保护</string>
	<string name="lost_protected_tv_reentry_content">重新进入设置向导</string>
	<string name="lost_protected_tv_scurity_content">#*location*# 获取手机的位置\n#*delete*# 手机设置为出厂模式\n#*lockscreen*# 给手机加密 锁定屏幕\n#*alram*# 发出报警音乐 </string>
	
	
	
	<string name="atool_query_content">手机号码归属地查询</string>
	
	<string name="numberaddress_db">/sdcard/address.db</string>
	<string name="atool_tv_text">设置手机归属地服务</string>
	<string name="atool_tv_text_noservice">归属地服务未开启</string>
	<string name="atool_tv_text_service">归属地服务开启</string>
	<string name="atool_tv_text_select_bg_text">更改归属地显示风格</string>
	<string name="atool_tv_change_location_text">更改归属地显示位置</string>

	<string name="drag_view_tv">按住绿色条拖动归属地显示的位置</string>
	
	
	<string name="call_sms_safe_tv">黑名单管理</string>
	
	<string name="call_sms_safe_bn">添加</string>
	<string name="call_sms_safe_not_null">黑名单号码不能为空</string>
	
	<string name="context_menu_update_blacknumber">更改黑名单号码</string>
	<string name="context_menu_delete_blacknumber">删除黑名单号码</string>

	
	<string name="atool_tv_change_smsbackup_text">短信备份</string>
	<string name="atool_tv_change_smsrestore_text">短信还原</string>
	<string name="sms_backup_path">/sdcard/smsbackup.xml/</string>
	<string name="sms_store_success">短信还原完成</string>
	<string name="sms_store_fail">短信还原失败</string>
	
	<string name="atool_tv_change_contactsbackup_text">联系人备份</string>
	<string name="atool_tv_change_contactsrestore_text">联系人还原</string>
	<string name="atool_tv_applock_text">程序锁</string>
	<string name="atool_tv_common_num_text">常用电话号码</string>
	
	
	<string name="app_manager_tv_title_text">所有程序</string>
	<string name="app_manager_tv_title_user_text">用户程序</string>
	<string name="app_manager_tv_loading_text">正在加载应用程序</string>
	
	
	<string name="app_item_tv_text">功能名字</string>	
	
	<string name="popup_item_tv1_text">卸载</string>
	<string name="popup_item_tv2_text">运行</string>
	<string name="popup_item_tv3_text">分享</string>
	
	
	<string name="cannote_uninstall">系统应用不能够卸载</string>
	<string name="cannote_start">系统应用不能够卸载</string>
	
	<string name="lock_app_item_tv_name_text">功能名字</string>
	<string name="lock_app_item_tv_package_text">包名</string>
	
	<string name="app_lock_pwd_tv_text">程序名</string>
	<string name="app_lock_pwd_bt_text">确定</string>
	
	<string name="app_lock_tv_text">程序锁</string>
	<string name="app_lock_tv_textpg">正在加载应用程序</string>
	
	
	<string name="setting_center_tv_text">设置程序锁服务</string>
	<string name="setting_center_tv_text_unservice">程序锁服务未开启</string>

	<string name="task_manager_tv">正在加载应用程序</string>
	<string name="task_manager_bt_killtask">一键清理</string>
	<string name="task_manager_bt_appsetting">程序设置</string>
	<string name="task_manager_title_tv_progress_number">进程数目</string>
	<string name="task_manager_title_tv_available_memory">可用内存</string>
	<string name="task_manager_title_tv_function_name">功能名字</string>
	<string name="task_manager_title_tv_memory_size">内存大小</string>

	<string name="app_detial_tv_appname">程序名</string>
	<string name="app_detial_tv_packagename">包名</string>
	
	
	<string name="task_setting_tv_settingshow">设置显示</string>
	<string name="task_setting_tv_text">不显示系统进程</string>
	
	<string name="task_setting_tv_lockscreen_clear">设置锁屏清理内存</string>
	<string name="task_setting_tv_clear_text">锁屏不清理</string>

	<string name="comm_num_db_name">commonnum.db</string>
	<string name="comm_num_db_path">/sdcard/commonnum.db</string>
	<string name="comm_num_db_group_tablename">classlist</string>

	<string name="traffic_manager_tv_total">2g/3G总流量</string>
	<string name="traffic_manager_tv_wifi_total">wifi总流量</string>
	
	<string name="traffic_item_tv_name_text">名称</string>
	<string name="traffic_item_tv_upload_text">上传</string>
	<string name="traffic_item_tv_download_text">下载</string>

	<string name="traffic_title_icon">图标</string>
	<string name="traffic_title_name">名称</string>
	<string name="traffic_title_upload">上传</string>
	<string name="traffic_title_download">下载</string>
	
	<string name="cache_info_tv_name_text">名称</string>
	<string name="cache_info_tv_code_size_text">程序大小</string>
	<string name="cache_info_tv_cache_size_text">缓存大小</string>
	<string name="cache_info_tv_data_size_text">数据大小</string>

	<string name="clearsdcard_tv_title_text">状态</string>
	<string name="clearsdcard_tv_bn_text">开始清理</string>
	<string name="clearsdcard_db_name">clearpath.db</string>
	<string name="clearsdcard_db_path">/sdcard/clearpath.db</string>
	
	
	<string name="antivirus_db_name">antivirus.db</string>
	<string name="antivirus_db_path">/sdcard/antivirus.db</string>



    <string name="NoChoose">0/3</string>
    <string name="ChooseOne">1/3</string>
    <string name="ChooseTow">2/3</string>
    <string name="ChooseThree">3/3</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="ChooseEnough">最多只可选择三个标签</string>
    <string name="ChooseHint">请先在上一页选择标签</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
</resources>
