<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    >
    
    <ImageView 
        android:id="@+id/traffic_item_icon"
        android:layout_width="@dimen/traffic_manager_tv_layout_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher"

        />
    
    <TextView 
        android:id="@+id/traffic_item_tv_name"
        android:layout_width="@dimen/traffic_manager_tv_layout_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/traffic_item_tv_name_text"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        
        />
    
    <TextView 
        android:id="@+id/traffic_item_tv_upload"
        android:layout_width="@dimen/traffic_manager_tv_layout_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/traffic_item_tv_upload_text"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        />
    
    <TextView 
        android:id="@+id/traffic_item_tv_download"
        android:layout_width="@dimen/traffic_manager_tv_layout_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/traffic_item_tv_download_text"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        />

</LinearLayout>
