<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 	android:background="@color/bakcgroundcolor"   
 >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        >
        
        <LinearLayout 
            android:layout_width="@dimen/task_setting_ll_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            >
            
            <TextView 
                android:layout_width="@dimen/task_setting_ll_width"
                android:layout_height="wrap_content"
                android:text="@string/task_setting_tv_settingshow"
                android:textSize="@dimen/task_setting_tv_textsize"
             	android:textColor="@android:color/white"
                />
            
            <TextView 
            	android:id="@+id/task_setting_tv_settingshow"
            	android:layout_width="@dimen/task_setting_ll_width"
            	android:layout_height="wrap_content"   
            	android:text="@string/task_setting_tv_text"
            	android:textColor="@android:color/white"
                />
			            
        </LinearLayout>
        
        <CheckBox 
            android:id="@+id/task_setting_show_ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>
    
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        >
        
        <LinearLayout 
            android:layout_width="@dimen/task_setting_ll_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            >
            <TextView 
                android:layout_width="@dimen/task_setting_ll_width"
                android:layout_height="wrap_content"
                android:text="@string/task_setting_tv_lockscreen_clear"
                android:textSize="@dimen/task_setting_tv_textsize"
                android:textColor="@android:color/white"
                />
            
            <TextView 
            	android:id="@+id/task_setting_tv_clear"
            	android:layout_width="@dimen/task_setting_ll_width"
            	android:layout_height="wrap_content"  
            	android:text="@string/task_setting_tv_clear_text" 
            	android:textColor="@android:color/white"
                />
			            
        </LinearLayout>
        
        <CheckBox 
            android:id="@+id/task_setting_clear_ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>
    
    
</LinearLayout>
