<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bakcgroundcolor"
    >
    
    <TextView 
        style="@style/text_title_style"
        android:text="@string/setupguide_title_second"
        />

    
    <ImageView 
      	style="@style/devide_line_style"
        />
    
    <TextView 
     	style="@style/text_content_style"
     	android:layout_marginTop="8dip"
     	android:text="@string/setupguide_content_second"
        />
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal"
        >
    
        <Button 
            android:id="@+id/bt_bind"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:text="绑定"
            />
        
        <CheckBox 
            android:id="@+id/cb_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="没有绑定"
            android:textColor="@android:color/white"
            />
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        
        <ImageView style="@style/image_status_off_style"/>
        <ImageView style="@style/image_status_on_style"/>
        <ImageView style="@style/image_status_off_style"/>
        <ImageView style="@style/image_status_off_style"/>
        
        
    </LinearLayout>


    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
         <LinearLayout 
            android:layout_marginTop="5dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">
    	
				<ImageView 
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:src="@drawable/bind"
				    />
				
        </LinearLayout>
        
        <Button 
            android:id="@+id/bt_setupguide_second_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="@string/setupguide_button_next_content"
            />
        
        <Button 
            android:id="@+id/bt_setupguide_second_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableRight="@drawable/next"
            android:text="@string/setupguide_button_purview_content"
            />
		
    </RelativeLayout>
    
</LinearLayout>
