<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bakcgroundcolor"
    android:orientation="vertical" >
    
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        >
        
        <ListView 
            android:id="@+id/task_manager_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dip"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@drawable/item_background_selector"
            android:background="#e2e2e2"
            android:clipToPadding="false"
            android:divider="@null"
            android:fadingEdge="none"
            android:dividerHeight="16dp"
            android:padding="16dp"
            android:scrollbarStyle="outsideOverlay"
            />
        
	    <LinearLayout 
	        android:id="@+id/task_manager_loading_ll"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center_vertical|center_horizontal"
	        android:orientation="vertical"
	        android:visibility="invisible"
	        >
	        
	        <ProgressBar 
	            android:layout_width="@dimen/task_manager_pb_size"
	            android:layout_height="@dimen/task_manager_pb_size"
	            />
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/task_manager_tv"
	            android:textColor="@android:color/black"
	            android:textSize="@dimen/task_manager_pb_textsize"
	            />

	    </LinearLayout>
	    
    </FrameLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        
    	<Button 
    	    android:layout_width="100dip"
    	    android:layout_height="40dip"
            android:background="@drawable/linkbtnbged"
            android:layout_marginRight="20dip"
    	    android:text="@string/task_manager_bt_killtask"
    	    android:onClick="killTask"
            android:layout_gravity="center"
    	    />    
    	    
    	<Button 
    	    android:id="@+id/task_manager_setting_bn"
    	    android:text="@string/task_manager_bt_appsetting"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:background="@drawable/linkbtnbged"
            android:layout_gravity="center"
    	    />
        
    </LinearLayout>

</LinearLayout>
